AWS/sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: eks-sample-linux-deployment
spec:
  selector:
    matchLabels:
      app: eks-sample-linux-app
  replicas: 3
  template:
    metadata:
      labels:
        app: eks-sample-linux-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - image: 477800801215.dkr.ecr.eu-central-1.amazonaws.com/maximalibri:latest
        imagePullPolicy: Always
        name: gs-spring-boot-docker
        ports:
        - containerPort: 8080
      nodeSelector:
        kubernetes.io/os: linux
