AWS/sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: service-sample
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: eks-sample-linux-app
