AWS/sample-full-yaml.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: eks-sample-linux-deployment
spec:
  selector:
    matchLabels:
      app: eks-sample-linux-app
  replicas: 3
  template:
    metadata:
      labels:
        app: eks-sample-linux-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - image: 477800801215.dkr.ecr.eu-central-1.amazonaws.com/maximalibri:latest
        imagePullPolicy: Always
        name: gs-spring-boot-docker
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: service-sample
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: eks-sample-linux-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: ingress-eks-sample-linux-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /hello-world
            pathType: Prefix
            backend:
              service:
                name: service-sample
                port:
                  number: 80
